<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Apteka_list">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/domoy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/whiteblack"
                android:layout_marginLeft="10dp"
                android:text="@string/Dom" />

            <Button
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/whiteblack"
                android:layout_marginLeft="130dp"
                android:text="@string/Back" />

        </LinearLayout>

        <TextView
            android:id="@+id/textApteka"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Name_Form"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="600px"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/address"
                android:textSize="17dp" />

            <TextView
                android:layout_width="180px"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/price"
                android:textSize="17dp" />

            <TextView
                android:layout_width="260px"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/telephone"
                android:textSize="17dp" />

        </LinearLayout>

        <ListView
            android:id="@+id/aptekaList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>