<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/whiteblack"
        android:text="@string/Dom">
    </Button>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="800px"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Name_Form"
            android:textSize="17dp" />

        <TextView
            android:layout_width="170px"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/price"
            android:textSize="17dp" />

    </LinearLayout>

    <ListView
        android:id="@+id/productList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

</LinearLayout>